--- a/index.html
+++ b/index.html
@@ -1,40 +1,10 @@
-<html>
-
-<head>
-    <title>La page Web de Samuel Garcia
-    </title>
-</head>
-
-<body>
-<em>
-En construction! Aller c'est parti!
-</em>
-<ul>
-    <li>
-        Quelques exercices : <a href="./exos1.html">Premiers exos</a>
-    </li>
-
-    <li>
-        Mon université préférée <a href="www.u-pec.fr">UPEC</a>.
-    </li>
-    <li>
-        <a href="./workflowProgWeb.txt">Workflow pour bien travailler en Prog Web (que je dois absolument connaitre et pratiquer pendant ce semestre</a>
-    </li>
-</ul>
-
-    <ol>
-        <li>
-            Quelques exercices : <a href="./exos1.html">Premiers exos</a>
-        </li>
-        
-        <li>
-            Mon université préférée <a href="www.u-pec.fr">UPEC</a>.
-        </li>
-        <li>
-            <a href="./workflowProgWeb.txt">Workflow pour bien travailler en Prog Web (que je dois absolument connaitre et pratiquer pendant ce semestre</a>
-        </li>
-    </ol>
-
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>un site</title>
+    </head>
+    <body>
+        <p>hello world ! </p>
+    </body>
 </html>
