--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <title>un site</title>
+    <meta charset="UTF-8">
+        <title>Exercice Samuel Garcia</title>
     </head>
     <body>
-        <p>hello world ! </p>
+        <h1>Les sites favoris de Samuel Garcia</h1>
+        <ol> <!-- Liste ordonnée-->
+
+            <li> <!--élément de chaque liste  -->
+                <a href="https://www.canardpc.com" target="_blank">CanardPc</a>
+                <ul>
+                    <li>Permet de s'informer sur l'actualité gaming et tech relative au PC</li>
+                    <li>Lire des tests de jeux vidéos, par exemple de <a href="https://www.canardpc.com/jeu-video/test-jeu-video/elden-ring-4/" target="_blank">Elden Ring</a> </li> 
+                </ul> <!-- liste à puce -->
+                <dl> <!-- liste de définition -->
+                    <dt><b>Jeux</b></dt>
+                    <dd>Je suis particulièrement attentif aux tests de jeux indépendants. Je privilégie CanardPC à JVC.com notamment du fait de la qualité de la rédaction et de leur intégrité.</dd>
+                    <dt><b>Forum</b></dt>
+                    <dd>Le site bénéficie d'un forum très actif, et relativement bien "peuplé".</dd>
+                </dl>
+            </li> 
+
+            <li> 
+                <a href="https://www.lemonde.fr" target="_blank"> LeMonde</a>
+                <ul>
+                    <li>Premier site d'information en langue française</li>
+                    <li>Permet de s'informer quasiement en temps réel sur la Guerre en Ukraine</li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="https://www.twitch.tv/" target="_blank"> Twitch</a>
+                <ul>
+                    <li>Regarder du contenu diffusé en direct</li>
+                    <li>Si je tente de limiter ma consommation de contenus vidéos en ligne, Twitch reste une plateforme intéressante.</li>
+                    <li>Parmi mes créateurs de contenu préférés : Domingo, Sardoche et MisterMV. </li>
+                </ul>
+            </li>
+
+        </ol>
     </body>
 </html>
