--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <dt><b>Jeux</b></dt>
                     <dd>Je suis particulièrement attentif aux tests de jeux indépendants. Je privilégie CanardPC à JVC.com notamment du fait de la qualité de la rédaction et de leur intégrité.</dd>
                     <dt><b>Forum</b></dt>
-                    <dd>Le site bénéficie d'un forum très actif, et relativement bien "peuplé".</dd>
+                    <dd>Le site bénéficie d'un forum très actif, il et relativement bien "peuplé" ce qui est rare sur ce type de forum.</dd>
                 </dl>
             </li> 
 
