--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
     <meta charset="UTF-8">
-        <title>Exercice Samuel Garcia</title>
+        <title>Le site de Samuel</title>
     </head>
     <body>
         <h1>Les sites favoris de Samuel Garcia</h1>
