--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             </div>
             <div class="right"></div>
             <div id="footer">
-                <h2 id="name">Pierre Valarcher</h2></div>
+                <h2 id="name">Samuel Garcia</h2></div>
         </body>
     </html>
