--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
         <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="cv_ex.css">
-            <title>Mon CV</title>
+            <title>Curriculum Vitae</title>
         </head>
         <body>
-            <div id="header"></div>
-            <div class="left"></div>
-            <div class="stuff">
-                <br><br>
+            <div class="cv-container">
+                <div class="left-column">
+                    <img class="portrait"
+                    src="Images/photocv.jpg" alt="Photo de CV" />
+               
+                    <br><br>
                 <h1>Curriculum Vitae</h1>
                 <h2>Samuel Garcia</h2>
                 <hr />
                 <br>
                 <p class="head">Expériences</p>
                 <ul>
-                    <li>L.co</li> <!-- Insérer date + lien web-->
-                    <li>MNHN</li>
-                    <li>Hashtag Avocats</li>
+                    <li>L.co, cabinet d'avocats : Juriste Crypto/Fintech</li> <a href="https://lco.legal"></a><!-- Insérer date + lien web-->
+                    <li>Museum National d'Histoire Naturelle : Juriste assistant DPO <a href="https://www.mnhn.fr/fr"></a></li>
+                    <li>Hashtag Avocats : Juriste junior  <a href="https://hashtagavocats.com"></a></li>
                     </li>
                 </ul>
                 <p class="head">Diplômes</p>
                 <ul>
-                    <li>UPEC M1</li>
-                        <li>Assas</li> <!-- Insérer date + lien web-->
-                        <li>ICP</li>
-                        <li>Lycée descartes</li>    
+                    <li>Master 1 droit du numérique parcours Informatique et Droit, Université Paris XII  <a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit"></a></li>
+                        <li>Diplôme universitaire de Droit et Technologies du Numérique, Université Paris II <a href="https://du-dtn.u-paris2.fr/fr"></a> </li> <!-- Insérer date + lien web-->
+                        <li>Bi-licence Droit Public-Sciences Politiques, Institut Catholique de Paris <a href="https://www.icp.fr/formations/diplomes/licences/licence-droit-parcours-droit-et-science-politique"></a>  </li>
+                        <li>Baccalauréat Economique et SocialLycée descartes</li>    
                     </li>
                 </ul>
                 <p class="head">Divers </p>
