--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
             <div class="cv-container">
                 <div class="left-column">
                     <img class="portrait"
-                    src="Images/photocv.jpg" alt="Photo de CV" />
+                    src="https://lco.legal/img/samuel-garcia.jpg" alt="Photo de CV" />
                
+                    <div class="section">
+                        <p>
+                            <i class="icon fab fa-linkedin text-darkblue"></i> Samuel Garcia
+                        </p>
+                    </div>
+
                     <br><br>
                 <h1>Curriculum Vitae</h1>
                 <h2>Samuel Garcia</h2>
                 <hr />
                 <br>
-                <p class="head">Expériences</p>
+                <p class="cv-container">Expériences</p>
                 <ul>
                     <li>L.co, cabinet d'avocats : Juriste Crypto/Fintech</li> <a href="https://lco.legal"></a><!-- Insérer date + lien web-->
                     <li>Museum National d'Histoire Naturelle : Juriste assistant DPO <a href="https://www.mnhn.fr/fr"></a></li>
