--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                            Téléphone : 0633186820
                        </p>
                     </div>
+                </div>
 
             <div class="right-column">
                 <div class="header">   
