--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   a{
     text-decoration: none;
-    color: #4472C4;
+    color: #9fa9ba;
   }
   
   a:hover{
@@ -44,7 +44,7 @@
   }
   
   .text-blue{
-    color: #4472C4;
+    color: #9ea5b0;
   }
   
   .text-darkblue{
@@ -76,7 +76,7 @@
   .left-column{
     grid-area: left-column;
     padding: 50px;
-    background-color: #4472C4;
+    background-color: #819e9e;
     color: white;
   }
   
@@ -110,7 +110,7 @@
   .header{
     grid-area: header;
     padding: 50px;
-    background-color: #F2F2F2;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -149,9 +149,9 @@
                        </p> 
                        <p>
                            Vous pouvez me contacter aux adresses suivantes :
-                           <li>Linkedin<a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                        <li>mail : samuelgarciadtn@gmail.com <a href ="mailto:samuelgarciadtn@gmail.com">samuelgarciadtn@gmail.com</a>
-                        Téléphone : 0633186820
+                           <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
+                        <li>mail : <a href ="mailto:samuelgarciadtn@gmail.com">samuelgarciadtn@gmail.com</a>
+                        <li>Téléphone : 0633186820</li>
                         </p>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                         <li>Président de l'association <strong>Solid'ère</strong></li>
                         <li>Responsable de la Revue IP/IT du DU DTN</li>
                         <li>Membre du pôle données et cybersécurité à Assas Legal Innovation</li>
-                        <li>Contributeur pôle cryptoactifs à Horizons =</li>
+                        <li>Contributeur pôle cryptoactifs à Horizons</li>
                     </ul>
                     </div>
                 
