--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
         <body>
   
             <div class="cv-container">
-              <div><img id="top1" src="" alt="bannière linkedin"></div>
-              <div><img class="top2" src="https://media-exp1.licdn.com/dms/image/C4E16AQGxYlavjGHfDQ/profile-displaybackgroundimage-shrink_350_1400/0/1605169932991?e=2147483647&v=beta&t=Of-MQWVM72MI35nIW97J3IJVvcQ-CgBeLoq0fNIa6mI" alt="bannière linkedin"></div>
+              <div><img id="top1" src="block.jpg" alt="bannière linkedin"></div>
+              <div><img id="top2" src="block.jpg" alt="bannière linkedin"></div>
                 
               <div class="left-column">
+                <br><br>
                     <img class="portrait" src="https://lh3.googleusercontent.com/8XH-k-V94QycFxDF-iNFoseoNkrhRV-pKLYxO5_bnK-Mfd6kRdTtIGgsCe5fQNBF6BKx2nhfgDFGRrtuNlbogXN7YYG5mxFXc6TFKQ=w600" alt="Cryptopunk 5059"/>
                     <div class="section">
                        <h2>Profil</h2>
@@ -32,15 +33,13 @@
 
 
               <div class="right-column"> <!-- Colomne droite-->
-                <div class="header">   
-              
-                    <h1>Samuel Garcia</h1>
-                    <p>Juriste Fintech/Crypto</p>
-                </div>
 
                 <div class="content"> <!-- XP PRO-->
                     <div class="section">
-                        <br>
+                      <br><br>
+                      <h1>Samuel Garcia</h1>
+                      <p>Juriste Fintech/Crypto</p>
+                        <br><br>
                         <h2>Expériences Professionnelles</h2>
                         <strong>Mars 2022-...</strong>
                         <p>Juriste Fintech et Cryptoactif, <a href="https://lco.legal" title="Un super cabinet d'avocats !">L.Co Avocats</a> </p>
