--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
               <div><img id="top2" src="block.jpg" alt="bannière linkedin"></div>
                 
               <div class="left-column">
-                <br><br>
                     <img class="portrait" src="https://lh3.googleusercontent.com/8XH-k-V94QycFxDF-iNFoseoNkrhRV-pKLYxO5_bnK-Mfd6kRdTtIGgsCe5fQNBF6BKx2nhfgDFGRrtuNlbogXN7YYG5mxFXc6TFKQ=w600" alt="Cryptopunk 5059"/>
                     <div class="section">
                        <h2>Profil</h2>
@@ -25,21 +24,21 @@
                        <p>
                            Vous pouvez me contacter aux adresses suivantes :
                            <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                        <li>mail : <a href ="mailto:samuelgarciadtn@gmail.com">samuelgarciadtn@gmail.com</a>
-                        <li>Téléphone : 0633186820</li>
+                        <li>mail :<a href ="mailto:samuelgarciadtn@gmail.com">monkeyshoulders@cryptoape.com</a></li>
+                        <li>Téléphone : 066677788</li>
                         </p>
                     </div>
                 </div>
 
 
               <div class="right-column"> <!-- Colomne droite-->
-
                 <div class="content"> <!-- XP PRO-->
-                    <div class="section">
-                      <br><br>
+                    <div class="intro">
                       <h1>Samuel Garcia</h1>
                       <p>Juriste Fintech/Crypto</p>
+                    </div>
                         <br><br>
+                        <div class="section">
                         <h2>Expériences Professionnelles</h2>
                         <strong>Mars 2022-...</strong>
                         <p>Juriste Fintech et Cryptoactif, <a href="https://lco.legal" title="Un super cabinet d'avocats !">L.Co Avocats</a> </p>
@@ -71,7 +70,7 @@
                         <li>Responsable du partenariat LegalTech</li>
                     </ul>
                     <br>
-                    </div>
+                  </div>
                 <div class="section">
                         <h2>Diplômes</h2>
                         <strong>2021-2023</strong> : Master 1, Droit de l'informatique en alternance, <a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit">Université Paris-Est Créteil</a>
