--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
                            Etudiant en <strong>droit de l'informatique</strong> à l'Université Paris XII, je suis passionné par les <strong>cryptoactifs</strong>.
                            Mon parcours pluridiscplinaire m'a amené à travailler sur de nombreux enjeux : regulatory, compliance, levée de fonds...
                            Après plusieurs expériences en cabinet d'avocats, j'envisage de poursuivre un docotrat en droit de la propriété intellectuelle à l'étranger.
+                           <br><br>
+                           Très actif dans le milieu associatif, j'ai aujourd'hui plusieurs projets entreprenarials. 
+                           La création de <a href="https://medium.com/@BuildLegal">BuildLegal</a> afin de pousser la crypto auprès des étudiants est mon principal projet ces derniers temps. 
                        </p> 
                        <p>
                            Vous pouvez me contacter aux adresses suivantes :
-                           <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
+                          <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
                         <li>mail :<a href ="mailto:samuelgarciadtn@gmail.com">monkeyshoulders@cryptoape.com</a></li>
-                        <li>Téléphone : 066677788</li>
+                          <li>Téléphone : 066677788</li>
                         </p>
                     </div>
                 </div>
