--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                        <p>
                            Vous pouvez me contacter aux adresses suivantes :
                           <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                        <li>mail :<a href ="mailto:samuelgarciadtn@gmail.com">monkeyshoulders@cryptoape.com</a></li>
+                        <li>mail :<a href ="mailto:monkeyshoulders@cryptoape.com">monkeyshoulders@cryptoape.com</a></li>
                           <li>Téléphone : 066677788</li>
                         </p>
                     </div>
@@ -35,14 +35,17 @@
 
 
               <div class="right-column"> <!-- Colomne droite-->
-                <div class="content"> <!-- XP PRO-->
+                <div class="content"> <!-- Titre car h1-->
                     <div class="intro">
                       <h1>Samuel Garcia</h1>
                       <p>Juriste Fintech/Crypto</p>
+                      <div><a href="#Expériences professionnelles">Expériences pro</a></div>
+                      <div><a href="#Diplômes">Diplômes</a></div> <!-- ancre de renvoi vers les catégories-->
+                      <div><a href="#Divers">Divers</a></div>
                     </div>
-                        <br><br>
+                        <br>
                         <div class="section">
-                        <h2>Expériences Professionnelles</h2>
+                        <h2><div id="Expériences Professionnelles">Expériences professionnelles</div></h2>
                         <strong>Mars 2022-...</strong>
                         <p>Juriste Fintech et Cryptoactif, <a href="https://lco.legal" title="Un super cabinet d'avocats !">L.Co Avocats</a> </p>
                         <ul>
@@ -56,7 +59,7 @@
                     <p>
                         <strong>Septembre 2021-Mars 2022</strong>
                         <br>
-                        Assistant DPO, <a href="https://www.mnhn.fr/fr" title="Un bien bel établissement">Museum National d'Histoire Naturelle</a> 
+                        Assistant DPO, <a href="https://www.mnhn.fr/fr" title="Un bien bel établissement">Museum National d'Histoire Naturelle</a> <!-- Title = texte lors du survol-->
                     </p>
                     <ul>
                         <li>Mise en conformité RGPD : registre, AIDP...</li>
@@ -72,10 +75,9 @@
                         <li>Pôle Corporate, Pôle IP/IT</li>
                         <li>Responsable du partenariat LegalTech</li>
                     </ul>
-                    <br>
                   </div>
                 <div class="section">
-                        <h2>Diplômes</h2>
+                        <h2><div id="Diplômes">Diplômes</div></h2>
                         <strong>2021-2023</strong> : Master 1, Droit de l'informatique en alternance, <a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit">Université Paris-Est Créteil</a>
                         <br>
                         <p></p>
@@ -85,7 +87,7 @@
                         <strong>2018-2021</strong> : Licence Droit Public-Sciences Politiques,  <a href="https://www.icp.fr/formations/diplomes/licences/licence-droit-parcours-droit-et-science-politique#:~:text=et%20Science%20politique-,Présentation,Licence%20sélective%20et%20sur%20Parcoursup.">Institut Catholique de Paris</a>
                     <div class="section">
                         <br>
-                        <h2>Divers</h2>
+                        <h2><div id="Divers">Divers</div></h2>
                         <ul>
                         <li>Président de l'association <strong>Solid'ère</strong></li>
                         <li>Responsable de la Revue IP/IT du DU DTN</li>
