--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
-	<head>
-            <meta charset="UTF-8">
+<html lang="fr">
+	    <head>
+            <meta charset = "UTF-8">
             <link rel="stylesheet" href="cvsam.css"/>
     
             <title>Curriculum Vitae</title>
-        </head>
+    </head>
         <body>
   
             <div class="cv-container">
-              <div><img id="top1" src="block.jpg" alt="bannière linkedin"></div>
-              <div><img id="top2" src="block.jpg" alt="bannière linkedin"></div>
+              <div><img id="top1" src="images/block.jpg" alt="bannière linkedin"></div>
+              <div><img id="top2" src="images/block.jpg" alt="bannière linkedin"></div>
                 
-              <div class="left-column">
+              <div class="left-column"> <!--colonne de gauche -->
                     <img class="portrait" src="https://lh3.googleusercontent.com/8XH-k-V94QycFxDF-iNFoseoNkrhRV-pKLYxO5_bnK-Mfd6kRdTtIGgsCe5fQNBF6BKx2nhfgDFGRrtuNlbogXN7YYG5mxFXc6TFKQ=w600" alt="Cryptopunk 5059"/>
                     <div class="section">
                        <h2>Profil</h2>
@@ -26,20 +26,20 @@
                        </p> 
                        <p>
                            Vous pouvez me contacter aux adresses suivantes :
+                           <ul>
                           <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                        <li>mail :<a href ="mailto:monkeyshoulders@cryptoape.com">monkeyshoulders@cryptoape.com</a></li>
+                          <li>mail :<a href ="mailto:monkeyshoulders@cryptoape.com">monkeyshoulders@cryptoape.com</a></li>
                           <li>Téléphone : 066677788</li>
-                        </p>
+                          </ul></p>
                     </div>
                 </div>
-
 
               <div class="right-column"> <!-- Colomne droite-->
                 <div class="content"> <!-- Titre car h1-->
                     <div class="intro">
                       <h1>Samuel Garcia</h1>
                       <p>Juriste Fintech/Crypto</p>
-                      <div><a href="#Expériences professionnelles">Expériences pro</a></div>
+                      <div><a href="#Expériencesprofessionnelles">Expériences pro</a></div>
                       <div><a href="#Diplômes">Diplômes</a></div> <!-- ancre de renvoi vers les catégories-->
                       <div><a href="#Divers">Divers</a></div>
                     </div>
@@ -69,7 +69,7 @@
                         <p>
                         <strong>Mars 2020-Août 2021</strong>
                         <br>
-                        Juriste junior, <a href="https://hashtagavocats.com"title="Premier amour...">Hashtag Avocats</a>
+                        Juriste junior, <a href="https://hashtagavocats.com" title="Premier amour...">Hashtag Avocats</a>
                        </p>
                     <ul>
                         <li>Pôle Corporate, Pôle IP/IT</li>
@@ -99,6 +99,5 @@
                 </div>
             </div>
           </div>           
-        </div>
           </body>
-    </html>
+</html>
