--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	    <head>
             <meta charset = "UTF-8">
-            <link rel="stylesheet" href="cvsam.css"/>
+            <link rel="stylesheet" href="cvsam.css"/> <!--Renvoie l'emplacement de la feuille de style.-->
     
             <title>Curriculum Vitae</title>
     </head>
@@ -28,11 +28,11 @@
                            Vous pouvez me contacter aux adresses suivantes :
                            <ul>
                           <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                          <li>mail :<a href ="mailto:monkeyshoulders@cryptoape.com">monkeyshoulders@cryptoape.com</a></li>
+                          <li><a href ="mailto:monkey@cryptoape.com">monkey@cryptoape.com</a></li>
                           <li>Téléphone : 066677788</li>
                           </ul></p>
                     </div>
-                </div>
+              </div>
 
               <div class="right-column"> <!-- Colomne droite-->
                 <div class="content"> <!-- Titre car h1-->
