--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset = "UTF-8">
             <link rel="stylesheet" href="cvsam.css"/> <!--Renvoie l'emplacement de la feuille de style.-->
     
-            <title>Curriculum Vitae</title>
+            <title>Curriculum Vitae Samuel Garcia</title>
     </head>
         <body>
   
