--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <p>Contrôle-PW-GARCIA-2022</p>
-        <p> Mon CV <a href=CvSamGarcia.html></p>
+        <p> Mon CV <a href=CvSamGarcia.html></p> <!--renvoi vers mon CV -->
     </body>
 </html>
