--- a/Controle-PW-Garcia-2022/Exercice 2 PW Garcia/Main page Exercice 2.html
+++ b/Controle-PW-Garcia-2022/Exercice 2 PW Garcia/Main page Exercice 2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	    <head>
             <meta charset = "UTF-8">
-            <link rel="stylesheet" href="cvsam.css"/> <!--Renvoie l'emplacement de la feuille de style.-->
+            <link rel="stylesheet" href="CSSex2.css"/> <!--Renvoie l'emplacement de la feuille de style.-->
     
             <title>Rapport de conférence : Intelligence Artificielle et Ethique, Mael Pegny</title>
     </head>
@@ -38,8 +38,10 @@
                 <div class="content"> <!-- Titre car h1-->
                     <div class="intro">
                       <h1>Rapport de conférence : Intelligence Artificielle et Vie privée </h1>
-                      <p></p>
-                      <div><a href="#Expériencesprofessionnelles">Partie 1 : Le Capitalisme de Surveillance </a></div>
+                      <p>
+                        
+                      </p>
+                      <div><a href="partie1.html">Partie 1 : Le Capitalisme de Surveillance </a></div>
                       <div><a href="#Diplômes">Partie 2 : Zoom sur la mort de l'anonymat en ligne</a></div> <!-- ancre de renvoi vers les catégories-->
                       <div><a href="#Divers">Partie 3 : Conséquences légales du machine learning sur les données personnelles</a></div>
                       <div><a href="#Divers">Conclusion</a></div>
@@ -47,7 +49,7 @@
                     </div>
                         <br>
                         <div class="section">
-                        <h2><div id="Expériences Professionnelles">Expériences professionnelles</div></h2>
+                        <h2><div id="Partie1">Expériences professionnelles</div></h2>
                         <strong>Mars 2022-...</strong>
                         <p>Juriste Fintech et Cryptoactif, <a href="https://lco.legal" title="Un super cabinet d'avocats !">L.Co Avocats</a> </p>
                         <ul>
