--- a/Controle-PW-Garcia-2022/Exercice2Garcia/partie1.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/partie1.html
@@ -5,6 +5,8 @@
         <title>Partie 1 : Le Capitalisme de Surveillance</title>
     </head>
     <body>
+        <h1>Partie 1 : Le Capitalisme de Surveillance</h1>
+        
         <p>La professeure émérite à la Harvard Business School, Shoshana Zuboff, popularise avec son livre « L’âge ducapitalisme de surveillance » en 2013 le concept selon lequel le XXIe siècle ouvre au capitalisme, du fait l’hégémonie du numérique, un « nouvel ordre économique qui revendique l’expérience humaine comme matière première gratuite à des fins de pratiques commerciales dissimulées d’extraction, de prédiction et de vente », ce qui constitue un « renversement de la souveraineté du peuple ». <br> <br>
             
             Avec cette vision plébiscitée par de nombreux médias et analystes économiques, elle dé-personnifie l’être humain qui devient bénéfice monétaire considérable au profit des acteurs économiques, publics ou privés, du système capitaliste de part ses données laissées sur internet.<br> <br>
