--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Liste de mes travaux</title>
     </head>
     <body>
-        <p>Contrôle-PW-GARCIA-2022 <a href="" </p>
-        <p> Mon CV <a href="C:\Users\samue\Desktop\MyGitHub\SamGarcia75.github.io:/CvSamGarcia.html"></p> <!--renvoi vers mon CV -->
+        <p>Contrôle-PW-GARCIA-2022<a href="Controle-PW-Garcia-2022\Exercice2Garcia\MainPageExercice2.html"</p>
+        <p> Mon CV <a href="CvSamGarcia.html"></p> <!--renvoi vers mon CV -->
     </body>
 </html>
