--- a/CvSamGarcia.html
+++ b/CvSamGarcia.html
@@ -4,7 +4,7 @@
             <meta charset = "UTF-8">
             <link rel="stylesheet" href="cvsam.css"/> <!--Renvoie l'emplacement de la feuille de style.-->
     
-            <title>Curriculum Vitae Samuel Garcia</title>
+            <title>Rapport de conférence : Intelligence Artificielle et Ethique, Mael Pegny</title>
     </head>
         <body>
   
@@ -37,10 +37,10 @@
               <div class="right-column"> <!-- Colomne droite-->
                 <div class="content"> <!-- Titre car h1-->
                     <div class="intro">
-                      <h1>Samuel Garcia</h1>
-                      <p>Juriste Fintech/Crypto</p>
-                      <div><a href="#Expériencesprofessionnelles">Expériences pro</a></div>
-                      <div><a href="#Diplômes">Diplômes</a></div> <!-- ancre de renvoi vers les catégories-->
+                      <h1>Rapport de conférence : Intelligence Artificielle et Vie privée </h1>
+                      <p></p>
+                      <div><a href="#Expériencesprofessionnelles">Expériences professionnelles </a></div>
+                      <div><a href="#Diplômes">Diplomes</a></div> <!-- ancre de renvoi vers les catégories-->
                       <div><a href="#Divers">Divers</a></div>
                     </div>
                         <br>
