--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Liste de mes travaux</title>
     </head>
     <body>
-        <p>Contrôle-PW-GARCIA-2022<a href="Controle-PW-Garcia-2022\Exercice2Garcia\MainPageExercice2.html"</p>
-        <p> Mon CV <a href="CvSamGarcia.html"></p> <!--renvoi vers mon CV -->
+        <a href="Controle-PW-Garcia-2022\Exercice2Garcia\MainPageExercice2.html">Controle-PW-Garcia-2022</a>
+        <br> <br> <a href="CvSamGarcia.html"> Mon CV</a>
     </body>
 </html>
