--- a/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
@@ -13,24 +13,16 @@
               <div><img id="top2" src="images/block.jpg" alt="bannière linkedin"></div>
                 
               <div class="left-column"> <!--colonne de gauche -->
-                    <img class="portrait" src="https://lh3.googleusercontent.com/8XH-k-V94QycFxDF-iNFoseoNkrhRV-pKLYxO5_bnK-Mfd6kRdTtIGgsCe5fQNBF6BKx2nhfgDFGRrtuNlbogXN7YYG5mxFXc6TFKQ=w600" alt="Cryptopunk 5059"/>
+                    <img class="portrait" src="PegnyPortrait.jpg"/>
                     <div class="section">
                        <h2>Profil</h2>
                        <p> <!-- Mettre + de texte pour remplir-->
-                           Etudiant en <strong>droit de l'informatique</strong> à l'Université Paris XII, je suis passionné par les <strong>cryptoactifs</strong>.
-                           Mon parcours pluridiscplinaire m'a amené à travailler sur de nombreux enjeux : regulatory, compliance, levée de fonds...
-                           Après plusieurs expériences en cabinet d'avocats, j'envisage de poursuivre un docotrat en droit de la propriété intellectuelle à l'étranger.
-                           <br><br>
-                           Très actif dans le milieu associatif, j'ai aujourd'hui plusieurs projets entreprenarials. 
-                           La création de <a href="https://medium.com/@BuildLegal">BuildLegal</a> afin de pousser la crypto auprès des étudiants est mon principal projet ces derniers temps. 
+                        Né en 1983, Maël Pégny a étudié la philosophie, la logique et la physique. <br> <br> Il a soutenu en 2013 une thèse de philosophie des sciences sur la définition du calcul. <br>Il a travaillé depuis lors sur l'histoire et la philosophie de l'informatique, en s'intéressant autant aux évolutions les plus récentes qu'à la compréhension du calcul comme technique cognitive sur le temps long.
+                        <br> <br> Il explore depuis 3 ans un territoire à l'intersection de l'éthique et de la philosophie des sciences, en examinant comment les nouveaux modèles d'IA modifient à la fois la science et la vie politique.
+                         <br> <br>  
+                           Vous pourrez trouver la thèse de Monsieur Pegny <a href="https://www.theses.fr/177305037">ici.</a> 
+                           <br> <br> Nous avons rencontrés Monsieur Pegny à l'occasion du cycle de conférences organisé par l'UPEC en octobre 2021. <br> <br> Sa conférence fut un réel basculement dans mes envies professionnelles, motivant mon souhait de m'investir pour la défense des libertés individuelles via la technologie blockchain.
                        </p> 
-                       <p>
-                           Vous pouvez me contacter aux adresses suivantes :
-                           <ul>
-                          <li><a href="https://www.linkedin.com/in/samuelgarciapro/">Linkedin</a></li>
-                          <li><a href ="mailto:monkey@cryptoape.com">monkey@cryptoape.com</a></li>
-                          <li>Téléphone : 066677788</li>
-                          </ul></p>
                     </div>
               </div>
 
@@ -43,7 +35,7 @@
                       </p>
                       <div><a href="partie1.html">Partie 1 : Le Capitalisme de Surveillance </a></div>
                       <div><a href="partie2.html">Partie 2 : Zoom sur la mort de l'anonymat en ligne</a></div> <!-- ancre de renvoi vers les catégories-->
-                      <div><a href="#Divers">Partie 3 : Conséquences légales du machine learning sur les données personnelles</a></div>
+                      <div><a href="partie3.html">Partie 3 : Conséquences légales du machine learning sur les données personnelles</a></div>
                       <div><a href="#Divers">Conclusion</a></div>
                       <div><a href="#Divers">Bibliographie</a></div> 
                     </div>
